--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "react-seed-basic",
+  "name": "chess",
   "version": "0.1.0",
   "main": "server/index.js",
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
-    "cors": "^2.8.3",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "massive": "^3.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.7.1",
-    "redux-promise-middleware": "^4.3.0"
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
