--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express-session": "^1.15.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "stockfish": "^8.0.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.10"
